// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders correctly 1`] = `
<View
  style={
    Object {
      "marginBottom": 17.5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": undefined,
        "fontSize": 14.524999999999999,
        "fontWeight": "500",
        "height": 14.524999999999999,
        "lineHeight": 14.524999999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#a3a6ac",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 52.5,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder=""
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 17.5,
          "height": 52.5,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 14.524999999999999,
        "fontWeight": "500",
        "height": 14.524999999999999,
        "lineHeight": 14.524999999999999,
        "marginTop": 8.75,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 2`] = `
<View
  style={
    Object {
      "marginBottom": 17.5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": undefined,
        "fontSize": 14.524999999999999,
        "fontWeight": "500",
        "height": 14.524999999999999,
        "lineHeight": 14.524999999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#a3a6ac",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 52.5,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 17.5,
          "height": 52.5,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 14.524999999999999,
        "fontWeight": "500",
        "height": 14.524999999999999,
        "lineHeight": 14.524999999999999,
        "marginTop": 8.75,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 3`] = `
<View
  style={
    Object {
      "marginBottom": 17.5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": undefined,
        "fontSize": 14.524999999999999,
        "fontWeight": "500",
        "height": 14.524999999999999,
        "lineHeight": 14.524999999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#a3a6ac",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 52.5,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={true}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#000000"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#000000",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 17.5,
          "height": 52.5,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": 24,
            "justifyContent": "center",
            "width": 24,
          },
          Object {
            "color": "#a3a6ac",
            "height": 52.5,
          },
        ]
      }
    >
      <View
        override={
          Object {
            "fill": "#a3a6ac",
            "height": 24,
            "width": 24,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 14.524999999999999,
        "fontWeight": "500",
        "height": 14.524999999999999,
        "lineHeight": 14.524999999999999,
        "marginTop": 8.75,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 4`] = `
<View
  style={
    Object {
      "marginBottom": 17.5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#a3a6ac",
        "fontFamily": undefined,
        "fontSize": 14.524999999999999,
        "fontWeight": "500",
        "height": 14.524999999999999,
        "lineHeight": 14.524999999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#a3a6ac",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 52.5,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#a3a6ac"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#a3a6ac",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 17.5,
          "height": 52.5,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": 24,
            "justifyContent": "center",
            "width": 24,
          },
          Object {
            "color": "#a3a6ac",
            "height": 52.5,
          },
        ]
      }
    >
      <View
        override={
          Object {
            "fill": "#a3a6ac",
            "height": 24,
            "width": 24,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 14.524999999999999,
        "fontWeight": "500",
        "height": 14.524999999999999,
        "lineHeight": 14.524999999999999,
        "marginTop": 8.75,
      }
    }
  />
</View>
`;

exports[`TextInput renders correctly 5`] = `
<View
  style={
    Object {
      "marginBottom": 17.5,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 14.524999999999999,
        "fontWeight": "500",
        "height": 14.524999999999999,
        "lineHeight": 14.524999999999999,
      }
    }
  >
    
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "borderBottomColor": "#de350b",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 52.5,
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      editable={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="Email"
      placeholderTextColor="#a3a6ac"
      rejectResponderTermination={true}
      style={
        Object {
          "color": "#a3a6ac",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 17.5,
          "height": 52.5,
        }
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "height": 24,
            "justifyContent": "center",
            "width": 24,
          },
          Object {
            "color": "#a3a6ac",
            "height": 52.5,
          },
        ]
      }
    >
      <View
        override={
          Object {
            "fill": "#de350b",
            "height": 24,
            "width": 24,
          }
        }
        xml={
          Object {
            "testUri": "../../../lib/src/icons/email.svg",
          }
        }
      />
    </View>
  </View>
  <Text
    style={
      Object {
        "color": "#de350b",
        "fontFamily": undefined,
        "fontSize": 14.524999999999999,
        "fontWeight": "500",
        "height": 14.524999999999999,
        "lineHeight": 14.524999999999999,
        "marginTop": 8.75,
      }
    }
  >
    error
  </Text>
</View>
`;
